responsive navbar and fixed word overlap on containers

--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,11 @@ body {
   font-family: 'Reddit Mono', monospace;
   margin: auto 0;
   padding: 60px 0 0 0;
-
+  text-wrap: wrap;
+  word-wrap: break-word;
+}
+.top-page {
+    padding-top: 60px;
 }
 
 h1,
@@ -222,7 +226,7 @@ img[alt] {
 }
 
 .submit-button {
-  background-color: #4CAF50;
+  background-color: #3486dce8;
   color: white;
   padding: 10px 20px;
   font-size: 16px;
@@ -233,7 +237,7 @@ img[alt] {
 }
 
 .submit-button:hover {
-  background-color: #45a049;
+  background-color: #3485dcd3;
 }
 
 .contact-form input[required],
@@ -284,7 +288,7 @@ img[alt] {
 button {
   padding: 5px 10px;
   margin: 0 5px;
-  background-color: #4CAF50;
+  background-color: #3486dce8;
   color: white;
   border: none;
   border-radius: 5px;
@@ -293,23 +297,23 @@ button {
 }
 
 button:hover {
-  background-color: #45a049;
+  background-color: #3485dcdf;
 }
 
 button.edit-button {
-  background-color: #ffa500;
+  background-color: #3486dce8;
 }
 
 button.edit-button:hover {
-  background-color: #cc8400;
+  background-color: #3486dce8;
 }
 
 button.remove-button {
-  background-color: #f44336;
+  background-color: #3486dce8;
 }
 
 button.remove-button:hover {
-  background-color: #da190b;
+  background-color: #3486dce8;
 }
 
 input,
@@ -407,8 +411,10 @@ textarea {
   }
 
   .social-icons {
-    display: grid;
-    grid-column: span 6;
+    display: flex;
+    flex-wrap:wrap;
+    justify-content: space-evenly;
+    
   }
 }
 
@@ -450,7 +456,7 @@ textarea {
 
   nav ul {
     padding: 10px 0;
-    background-color: #666;
+    background-color: #2c3e50;
   }
 
   .section-content {
@@ -494,9 +500,17 @@ textarea {
     font-size: 1.6rem;
     color: #2c3e50;
   }
-
+  
+  h1{
+    
+    padding-top: 20px;
+  }
   nav ul {
-    padding: 6px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 0;
 
   }
 
